HelloUltraviolet/Fixtures/RejectedSource/Modules/MissingImport/Expected.uv
//! Expected diagnostic metadata for the MissingImport rejected-source specimen.

expectedDiagnostic("E-MOD-1202", "Import-Path-Err")
expectedDiagnostic("E-MOD-1202", "Bind-Import-Err")
expectedDiagnostic("E-MOD-1202", "Resolve-Import-Err")
expectedDiagnostic("E-MOD-1202", "diagnostics.ImportDeclarations")
